<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                style="@style/ButtonStyle"
                android:text="@string/all" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                style="@style/ButtonStyle"
                android:text="@string/breaking" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                style="@style/ButtonStyle"
                android:text="@string/lifestyle" />

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                style="@style/ButtonStyle"
                android:text="@string/music" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                style="@style/ButtonStyle"
                android:text="@string/entertainment" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                style="@style/ButtonStyle"
                android:text="@string/technology" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                style="@style/ButtonStyle"
                android:text="@string/politics" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                style="@style/ButtonStyle"
                android:text="@string/local" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>